todo-app/src/sass/components/App.scss
.App {
  background: url("../../images/bg-mobile-light.jpg") no-repeat top/120%;
  min-height: 100vh;
  padding: 0 25px;
  padding-top: 50px;

  @media (min-width: 600px) {
    background-image: url("../../images/bg-desktop-light.jpg");
    background-position: top;
    background-size: 220%;
    padding-top: 100px;
  }

  @media (min-width: 800px) {
    background-size: 160%;
  }

  @media (min-width: 1250px) {
    background-size: 100%;
  }

  &__header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 50px;
  }

  &__heading {
    color: $veryLightGray;
    letter-spacing: 10px;
    text-transform: uppercase;
  }

  &__btn-theme {
    background: none;
    border: none;

    &:hover {
      cursor: pointer;
    }
  }

  &__footer {
    margin-top: 50px;
    margin-bottom: 2em;
    color: $lightGrayishBlue;
    text-align: center;
  }

  // DARK MODE STYLES

  &.dark {
    background-color: map-get($darkMode, "veryDarkBlue");
    background-image: url('../../images/bg-mobile-dark.jpg');

    @media (min-width: 600px) {
      background-image: url("../../images/bg-desktop-dark.jpg");
      background-position: top/220%;
    }

    .App__footer {
      color: map-get($darkMode, "darkGrayishBlue");
    }

    // add task
    & .AddTask {
      background-color: map-get($darkMode, "veryDarkDesaturatedBlue");

      &__btn {
        background-color: map-get($darkMode, "veryDarkDesaturatedBlue");
        border-color: map-get($darkMode, "veryDarkGrayishBlue");
      }

      &__input {
        background-color: map-get($darkMode, "veryDarkDesaturatedBlue");
        color: map-get($darkMode, "lightGrayishBlue");

        &::placeholder {
          color: map-get($darkMode, "darkGrayishBlue");
        }
      }
    }

    // task
    & .Task {
      background-color: map-get($darkMode, "veryDarkDesaturatedBlue");
      border-color: map-get($darkMode, "darkGrayishBlue");

      &__btn-check {
        background-color: map-get($darkMode, "veryDarkDesaturatedBlue");

        &::before {
          background-color: map-get($darkMode, "veryDarkGrayishBlue");
        }
      }

      &__btn-cross {
        fill: map-get($darkMode, "darkGrayishBlue");
      }

      &__name {
        color: map-get($darkMode, "lightGrayishBlue");
      }

      &__btn-delete {
        background-color: map-get($darkMode, "veryDarkDesaturatedBlue");
      }

      &--done {
        & .Task__name {
          color: map-get($darkMode, "darkGrayishBlue");
        }
      }
    }

    // displaytasks
    & .DisplayTasks {
      box-shadow: 0 30px 20px rgba(0, 0, 0, 0.19), 0 40px 60px rgba(0, 0, 0, 0.23);

      &__footer {
        background-color: rgba(0, 0, 0, 0.19);
      }

      &__list {
        box-shadow: none;
      }

      &__footer-top {
        background-color: map-get($darkMode, "veryDarkDesaturatedBlue");
        box-shadow: none;
      }

      &__items-left {
        color: map-get($darkMode, "darkGrayishBlue");
      }

      &__btn-clear {
        color: map-get($darkMode, "darkGrayishBlue");

        &:hover {
          color: map-get($darkMode, "lightGrayishBlue");
        }
      }

      &__footer-down {
        background-color: map-get($darkMode, "veryDarkDesaturatedBlue");
        box-shadow: none;
      }
    }

    // filters
    & .FilterTasks {
      &__btn {
        color: map-get($darkMode, "darkGrayishBlue");

        &:hover {
          color: map-get($darkMode, "lightGrayishBlue");
        }
      }

      .FilterTasks__btn--active {
        color: #3a7bfd;
      }
    }
  }
}

